Fix a bunch of type analysis bugs (bug 674694, r=rpearl).